added Defekti Activity

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,9 +1,67 @@
 <resources>
-    <string name="app_name">SewingWorkshop</string>
-    <string name="manual">MANUAL</string>
+    <string name="app_name">Швейная мастерская</string>
+    <string name="manual">СПРАВОЧНИК</string>
     <string name="poriadok">Порядок снятия мерок</string>
     <string name="rashod">Расход тканей на изделия</string>
     <string name="defekti">Виды конструктивных дефектов</string>
     <string name="formuli">Формулы расчета изделий</string>
     <string name="pribavki">Прибавки на свободное облегание</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="DefektiKlasifikacia">
+        Все возможные дефекты распределены на шесть групп в зависимости от внешнего\n
+        проявления и причин их возникновения:  \n
+  1. Горизонтальные складки, образующиеся в результате:\n
+     •  увеличенной длины детали в вертикальном направлении;\n
+     •  уменьшенной ширины детали в горизонтальном направлении.\n
+  2. Вертикальные складки, вызванные:\n
+     •  излишней шириной детали в горизонтальном направлении;\n
+     •  недостаточной длиной детали в вертикальном направлении.\n
+  3. Наклонные складки по всей ширине детали, образующиеся вследствие:\n
+     •  одностороннего укорочения или удлинения опорного участка детали;\n
+     •  действия разнонаправленных сил давления на обуженные участки детали.\n
+  4. Угловые  заломы  на  участке  детали (связаны  с  неправильным  опре-\n
+      делением  угла  для  образования  выпуклости  или  вогнутости  на  отдельных\n
+      участках поверхности одежды); внешне проявляются в виде:\n
+     •  напряжения  внутри  детали  и  образования  слабины  по  ее  краям  из-за\n
+      недостаточного раствора вытачек или недостаточной величины сутюживания;\n
+     •  образования  слабины  детали  из-за  недостаточного  раствора  талиевой\n
+      вытачки для образования вогнутой формы.\n
+  5. Балансовые   нарушения,   которые   приводят   к   перемещению (закручиванию)\n
+        смонтированных деталей из-за нарушения их равновесия в изделии.\n
+  6. Прочие дефекты (ощущаются в основном при движениях одетого человека).
+</string>
+    <string name="DefektiNetochnostiVosproisvedenia">
+        При  разработке  конструкции  главным  является  правильный  выбор  рас-\n
+пределения  прибавок  в  соответствии  с  модой  и  индивидуальными  особен-\n
+ностями  фигуры. Это  ведет  к  определению  формы  и  размеров  деталей  новой\n
+модели изделия, не соответствующих эскизу модели или ее замыслу. Наиболее\n
+часто встречающиеся погрешности воспроизведения силуэтной формы:\n
+•  неправильное  определение  величин  прибавок  при  расчете  основных\n
+конструктивных поясов;\n
+•  неправильное  распределение  прибавок  между  основными  участками\n
+изделия;\n
+•  неправильный выбор способа получения объемной формы участка изделия;\n
+•  неправильное  расположение   и  конфигурация  линий  членения\n
+(швов, вытачек, подрезов и др.).\n
+При выборе прибавки по линии груди и ее распределении между пере-\n
+дом, спинкой и проймой необходимо учитывать не только модное направление,\n
+но и величину прибавки к глубине проймы (Пспр). С увеличением прибавки к\n
+обхвату груди процент прибавки на участке проймы должен уменьшаться, так\n
+как в противном случае рукав получается слишком открытым, что приводит к\n
+зрительному  увеличению  объема*  лифа.  Установлено  также,  что  чем  больше\n
+глубина проймы, тем меньший процент прибавки должен приходиться на долю\n
+ширины  проймы.  Так,  если  прибавка  к  глубине  проймы  Пспр = 6,0 - 8,0 см,\n
+прибавка к ширине проймы должна составлять 40 - 50 % от Пг. При Пспр Ј 15,0\n
+см Пшпр = 0. Неправильный выбор способа формообразования заключается в\n
+недостаточном растворе вытачек или сутюжки для создания объемной формы в\n
+области груди, лопаток или бедер.\n
+Неправильное расположение и конфигурация линий членения может рас-\n
+сматриваться относительно центров спинки, переда.\n
+Необходимо  также  проверять  направление  вытачек,  глубины  складок,\n
+расположение драпировок относительно общего объема участков поверхности\n
+изделия и наиболее выпуклых ее участков. Часто коническое расширение дета-\n
+лей подменяют увеличенным наклоном боковых срезов. Это приводит к обра-\n
+зованию плоских, гладких поверхностей вместо мягких, драпированных. 
+    </string>
 </resources>
