added Formuli Activity

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -184,4 +184,28 @@
 боковых срезов (рисунок 7 (справа)) (уменьшают прогиб срезов, а также вводят до-\n
 полнительные линии членения для сохранения ширины изделия по линии талии).\n
     </string>
+    <string name="DefektiDvigenie">
+        Наиболее  часто  встречающимися  дефектами  динамического  несоот-\n
+        ветствия  являются: затруднение  отведения  рук  вперед  и  затруднение  подъема\n
+        рук или ног.\n
+        Затруднение отведения рук вперед (рисунок 1) возникает в том слу-\n
+        чае, если спина обужена в плечевом поясе (рисунок 1а) или только в ниж-\n
+        ней части проймы (рисунок 1б). Дефект усугубляется узким окатом рукава\n
+        и неправильным оформлением проймы спереди (рисунок 1в). Устранение\n
+        дефекта предполагает увеличение ширины спинки, расширение рукава по окату\n
+        (рисунок 1г).  Переоформление  проймы  переда  выполняют  также  при  ее\n
+        малой глубине (рисунок 1д).\n
+        Затруднение подъема рук (рисунок 2) проявляется тогда, когда уве-\n
+        личена глубина проймы и обужен окат рукава (рисунок 2а). Устраняют де-\n
+        фект  введением  ластовицы  в  нижней  части  узкого  рукава (рисунок 2б),\n
+        расширением оката или уменьшением глубины проймы за счет запасов в ниж-\n
+        ней  части (рисунок 2в).  В  случае  отсутствия  запаса  понижают  верхний\n
+        плечевой контур (рисунок 2г) или уменьшают высоту оката рукава (рисунок 2д).
+    </string>
+    <string name="Merki">
+        1. Рост - Р - измеряют расстояние по вертикали от пола и до макушки.
+        2. Полуобхват шеи - Ош - полный обхват шеи, сантиметровая строчка должна проходить
+        ззади над остистым отростком шейного позвонка, збоку и спереди по основанию шеи, оставаясь
+        над яремною впадиной
+    </string>
 </resources>
